tests/react_imports/react_imports.exp
Error ------------------------------------------------------------------------------------------- commonjs-pascal.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].
[incompatible-cast]

   commonjs-pascal.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:43:15
   43| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   commonjs-pascal.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- commonjs-pascal.js:6:2

Cannot cast object literal to `Node` because: [incompatible-cast]
 - Either property `key` is missing in object literal [1] but exists in `React.Element` [2].
 - Or object literal [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object literal [1] but exists in `$Iterable` [4].

   commonjs-pascal.js:6:2
    6| ({}: React.Node); // Error
        ^^ [1]

References:
   <BUILTINS>/react.js:20:5
   20|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:21:5
   21|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:22:5
   22|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error ------------------------------------------------------------------------------------------ commonjs-pascal.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in module `react` [1]. [prop-missing]

   commonjs-pascal.js:7:14
     7| (null: React.Missing); // Error
                     ^^^^^^^

References:
   <BUILTINS>/react.js:443:27
   443|   declare module.exports: $Exports<'react'>;
                                  ^^^^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- commonjs.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].
[incompatible-cast]

   commonjs.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:43:15
   43| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   commonjs.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- commonjs.js:6:2

Cannot cast object literal to `Node` because: [incompatible-cast]
 - Either property `key` is missing in object literal [1] but exists in `React.Element` [2].
 - Or object literal [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object literal [1] but exists in `$Iterable` [4].

   commonjs.js:6:2
    6| ({}: React.Node); // Error
        ^^ [1]

References:
   <BUILTINS>/react.js:20:5
   20|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:21:5
   21|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:22:5
   22|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error ------------------------------------------------------------------------------------------------- commonjs.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in module `react` [1]. [prop-missing]

   commonjs.js:7:14
   7| (null: React.Missing); // Error
                   ^^^^^^^

References:
   commonjs.js:1:15
   1| const React = require('react');
                    ^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------- es-default-pascal.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].
[incompatible-cast]

   es-default-pascal.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:43:15
   43| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   es-default-pascal.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- es-default-pascal.js:6:2

Cannot cast object literal to `Node` because: [incompatible-cast]
 - Either property `key` is missing in object literal [1] but exists in `React.Element` [2].
 - Or object literal [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object literal [1] but exists in `$Iterable` [4].

   es-default-pascal.js:6:2
    6| ({}: React.Node); // Error: Not in default export.
        ^^ [1]

References:
   <BUILTINS>/react.js:20:5
   20|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:21:5
   21|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:22:5
   22|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------- es-default-pascal.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in module `react` [1]. [prop-missing]

   es-default-pascal.js:7:14
     7| (null: React.Missing); // Error: Not in default export.
                     ^^^^^^^

References:
   <BUILTINS>/react.js:443:27
   443|   declare module.exports: $Exports<'react'>;
                                  ^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ es-default.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].
[incompatible-cast]

   es-default.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:43:15
   43| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   es-default.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- es-default.js:5:25

Cannot get `React.Node` because property `Node` is missing in object type [1]. [prop-missing]

   es-default.js:5:25
     5| ('Hello, world!': React.Node); // Error: Not in default export.
                                ^^^^

References:
   <BUILTINS>/react.js:401:26
                                 v
   401|   declare export default {
   402|     +DOM: typeof DOM,
   403|     +PropTypes: typeof PropTypes,
   404|     +version: typeof version,
   405|     +checkPropTypes: typeof checkPropTypes,
   406|     +memo: typeof memo,
   407|     +lazy: typeof lazy,
   408|     +createClass: typeof createClass,
   409|     +createContext: typeof createContext,
   410|     +createElement: typeof createElement,
   411|     +cloneElement: typeof cloneElement,
   412|     +createFactory: typeof createFactory,
   413|     +createRef: typeof createRef,
   414|     +forwardRef: typeof forwardRef,
   415|     +isValidElement: typeof isValidElement,
      :
   423|     +Suspense: typeof Suspense,
   424|     +useContext: typeof useContext,
   425|     +useState: typeof useState,
   426|     +useReducer: typeof useReducer,
   427|     +useRef: typeof useRef,
   428|     +useEffect: typeof useEffect,
   429|     +useLayoutEffect: typeof useLayoutEffect,
   430|     +useCallback: typeof useCallback,
   431|     +useMemo: typeof useMemo,
   432|     +useImperativeHandle: typeof useImperativeHandle,
   433|     +useTransition: typeof useTransition,
   434|     +useDeferredValue: typeof useDeferredValue,
   435|     +startTransition: typeof startTransition,
   436|     ...
   437|   };
          ^ [1]


Error ----------------------------------------------------------------------------------------------- es-default.js:6:12

Cannot get `React.Node` because property `Node` is missing in object type [1]. [prop-missing]

   es-default.js:6:12
     6| ({}: React.Node); // Error: Not in default export.
                   ^^^^

References:
   <BUILTINS>/react.js:401:26
                                 v
   401|   declare export default {
   402|     +DOM: typeof DOM,
   403|     +PropTypes: typeof PropTypes,
   404|     +version: typeof version,
   405|     +checkPropTypes: typeof checkPropTypes,
   406|     +memo: typeof memo,
   407|     +lazy: typeof lazy,
   408|     +createClass: typeof createClass,
   409|     +createContext: typeof createContext,
   410|     +createElement: typeof createElement,
   411|     +cloneElement: typeof cloneElement,
   412|     +createFactory: typeof createFactory,
   413|     +createRef: typeof createRef,
   414|     +forwardRef: typeof forwardRef,
   415|     +isValidElement: typeof isValidElement,
      :
   423|     +Suspense: typeof Suspense,
   424|     +useContext: typeof useContext,
   425|     +useState: typeof useState,
   426|     +useReducer: typeof useReducer,
   427|     +useRef: typeof useRef,
   428|     +useEffect: typeof useEffect,
   429|     +useLayoutEffect: typeof useLayoutEffect,
   430|     +useCallback: typeof useCallback,
   431|     +useMemo: typeof useMemo,
   432|     +useImperativeHandle: typeof useImperativeHandle,
   433|     +useTransition: typeof useTransition,
   434|     +useDeferredValue: typeof useDeferredValue,
   435|     +startTransition: typeof startTransition,
   436|     ...
   437|   };
          ^ [1]


Error ----------------------------------------------------------------------------------------------- es-default.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in object type [1]. [prop-missing]

   es-default.js:7:14
     7| (null: React.Missing); // Error: Not in default export.
                     ^^^^^^^

References:
   <BUILTINS>/react.js:401:26
                                 v
   401|   declare export default {
   402|     +DOM: typeof DOM,
   403|     +PropTypes: typeof PropTypes,
   404|     +version: typeof version,
   405|     +checkPropTypes: typeof checkPropTypes,
   406|     +memo: typeof memo,
   407|     +lazy: typeof lazy,
   408|     +createClass: typeof createClass,
   409|     +createContext: typeof createContext,
   410|     +createElement: typeof createElement,
   411|     +cloneElement: typeof cloneElement,
   412|     +createFactory: typeof createFactory,
   413|     +createRef: typeof createRef,
   414|     +forwardRef: typeof forwardRef,
   415|     +isValidElement: typeof isValidElement,
      :
   423|     +Suspense: typeof Suspense,
   424|     +useContext: typeof useContext,
   425|     +useState: typeof useState,
   426|     +useReducer: typeof useReducer,
   427|     +useRef: typeof useRef,
   428|     +useEffect: typeof useEffect,
   429|     +useLayoutEffect: typeof useLayoutEffect,
   430|     +useCallback: typeof useCallback,
   431|     +useMemo: typeof useMemo,
   432|     +useImperativeHandle: typeof useImperativeHandle,
   433|     +useTransition: typeof useTransition,
   434|     +useDeferredValue: typeof useDeferredValue,
   435|     +startTransition: typeof startTransition,
   436|     ...
   437|   };
          ^ [1]


Error --------------------------------------------------------------------------------------- es-namespace-pascal.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].
[incompatible-cast]

   es-namespace-pascal.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:43:15
   43| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   es-namespace-pascal.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error --------------------------------------------------------------------------------------- es-namespace-pascal.js:6:2

Cannot cast object literal to `Node` because: [incompatible-cast]
 - Either property `key` is missing in object literal [1] but exists in `React.Element` [2].
 - Or object literal [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object literal [1] but exists in `$Iterable` [4].

   es-namespace-pascal.js:6:2
    6| ({}: React.Node); // Error
        ^^ [1]

References:
   <BUILTINS>/react.js:20:5
   20|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:21:5
   21|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:22:5
   22|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error -------------------------------------------------------------------------------------- es-namespace-pascal.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in module `React` [1]. [prop-missing]

   es-namespace-pascal.js:7:14
   7| (null: React.Missing); // Error
                   ^^^^^^^

References:
   es-namespace-pascal.js:1:1
   1| import * as React from 'React';
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- es-namespace.js:4:2

Cannot cast `React.Component` to number because class `React.Component` [1] is incompatible with number [2].
[incompatible-cast]

   es-namespace.js:4:2
    4| (React.Component: number); // Error
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:43:15
   43| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [1]
   es-namespace.js:4:19
    4| (React.Component: number); // Error
                         ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- es-namespace.js:6:2

Cannot cast object literal to `Node` because: [incompatible-cast]
 - Either property `key` is missing in object literal [1] but exists in `React.Element` [2].
 - Or object literal [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object literal [1] but exists in `$Iterable` [4].

   es-namespace.js:6:2
    6| ({}: React.Node); // Error
        ^^ [1]

References:
   <BUILTINS>/react.js:20:5
   20|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:21:5
   21|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:22:5
   22|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error --------------------------------------------------------------------------------------------- es-namespace.js:7:14

Cannot get `React.Missing` because property `Missing` is missing in module `react` [1]. [prop-missing]

   es-namespace.js:7:14
   7| (null: React.Missing); // Error
                   ^^^^^^^

References:
   es-namespace.js:1:1
   1| import * as React from 'react';
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]



Found 19 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
